
    * ``bzr init`` will now print a little less verbose output.
      (Marius Kruger)

    * Rule-based preferences can now accept multiple patterns for a set of
      rules.  (Marius Kruger)

  BUG FIXES:

    * ``bzr log FILE`` now correctly shows mainline revisions merging
      a change to FILE when the ``--short`` and ``--line`` log formats
      are used. (Ian Clatworthy, #317417)

    * Fix a problem with CIFS client/server lag on Windows colliding with
      an invariant-per-process algorithm for generating AtomicFile names
      (Adrian Wilkins, #304023)

    * Many socket operations now handle EINTR by retrying the operation.
      Previously EINTR was treated as an unrecoverable failure.  There is
      a new ``until_no_eintr`` helper function in ``bzrlib.osutils``.
      (Andrew Bennetts)

  DOCUMENTATION:

  API CHANGES:

  TESTING:

  INTERNALS:

    * ``TreeDelta.show()`` now accepts a ``filter`` parameter allowing log
      formatters to retrict the output.
      (Vincent Ladeuil)

bzr 1.11rc1 "Eyes up!" 2009-01-09
---------------------------------

This first monthly release of Bazaar for 2009 improves Bazaar's operation
in Windows, Mac OS X, and other situations where file names are matched
without regard to capitalization: Bazaar tries to match the case of an
existing file.  This release of Bazaar also improves the efficiency of
Tortoise Windows Shell integration and lets it work on 64-bit platforms.

The UI through which Bazaar supports historic formats has been improved,
so 'bzr help formats' now gives a simpler and shorter list, with clear
advice.

This release also fixes a number of bugs, particularly a glitch that can
occur when there are concurrent writes to a pack repository.

  CHANGES:

    * Formats using Knit-based repository formats are now explicitly
      marked as deprecated. (Ian Clatworthy)

  NEW FEATURES:

    * Add support for `bzr tags -r 1..2`, that is we now support showing