@@ -38,6 +38,9 @@ NOT RELEASED YET
       a change to FILE when the ``--short`` and ``--line`` log formats
       are used. (Ian Clatworthy, #317417)
 
+    * Support symlinks with non-ascii characters in the symlink filename.
+      (Jelmer Vernooij, #319323)
+
     * Fix a problem with CIFS client/server lag on Windows colliding with
       an invariant-per-process algorithm for generating AtomicFile names
       (Adrian Wilkins, #304023)
